Specify that resume is in french

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>I am a full-stack web engineer located in Paris, France.</p>
     <p>I have experience working with ReactJS, Redux, and GraphQL in agile environments with the industry's best practices.</p>
     <p><a id="letsTalk" href="mailto:sj.ruhlmann@gmail.com">Let's talk?</a></p>
-    <p id="findMe">You can also find me on <a href="https://linkedin.com/in/stephaneruhlmann">LinkedIn</a> and <a href="https://github.com/stephane-ruhlmann">GitHub</a> or check out <a href="resume.pdf" target="_blank">my resume</a>.</p>
+    <p id="findMe">You can also find me on <a href="https://linkedin.com/in/stephaneruhlmann">LinkedIn</a> and <a href="https://github.com/stephane-ruhlmann">GitHub</a> or check out <a href="resume.pdf" target="_blank">my resume</a> (in french).</p>
   </div>
 </body>
 
