--- a/index.html
+++ b/index.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Hello, I'm Stephane Ruhlmann.</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Stephane Ruhlmann" />
+    <meta
+      name="description"
+      content="I am a full-stack web engineer located in Paris, France. I have experience working with ReactJS, Redux, and GraphQL in agile environments with the industry's best practices."
+    />
+    <meta
+      name="keywords"
+      content="stephane ruhlmann, reactjs, graphql, front-end developer, paris"
+    />
+    <meta property="og:title" content="Hello, I'm Stephane Ruhlmann." />
+    <meta
+      property="og:description"
+      content="I am a full-stack web engineer located in Paris, France. I have experience working with ReactJS, Redux, and GraphQL in agile
+      environments with the industry's best practices."
+    />
 
-<head>
-    <title>Stephane Ruhlmann</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="normalize.css" rel="stylesheet" type="text/css" />
+  </head>
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href='index.css' rel='stylesheet' type='text/css'>
-    <link href='normalize.css' rel='stylesheet' type='text/css'>
-</head>
-
-<body>
-  <div id="info">
-    <h1>Hello! I'm Stephane Ruhlmann.</h1>
-    <p>I am a full-stack web engineer located in Paris, France.</p>
-    <p>I have experience working with ReactJS, Redux, and GraphQL in agile environments with the industry's best practices.</p>
-    <p><a id="letsTalk" href="mailto:sj.ruhlmann@gmail.com">Let's talk?</a></p>
-    <p id="findMe">You can also find me on <a href="https://linkedin.com/in/stephaneruhlmann">LinkedIn</a> and <a href="https://github.com/stephane-ruhlmann">GitHub</a> or check out <a href="resume.pdf" target="_blank">my resume</a> (in french).</p>
-  </div>
-</body>
-
+  <body>
+    <div id="info">
+      <h1>Hello! I'm Stephane Ruhlmann.</h1>
+      <p>I am a full-stack Javascript engineer located in Paris, France.</p>
+      <p>
+        I have experience working with ReactJS, Redux, and GraphQL in agile
+        environments with the industry's best practices.
+      </p>
+      <p>
+        <a id="letsTalk" href="mailto:sj.ruhlmann@gmail.com">Let's talk?</a>
+      </p>
+      <p>
+        You can also find me on
+        <a href="https://linkedin.com/in/stephaneruhlmann">LinkedIn</a> and
+        <a href="https://github.com/stephane-ruhlmann">GitHub</a> or check out
+        <a href="resume.pdf" target="_blank">my resume</a> (in french).
+      </p>
+    </div>
+  </body>
 </html>
