Update linkedin link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </p>
       <p>
         You can also find me on
-        <a href="https://linkedin.com/in/stephaneruhlmann">LinkedIn</a> and
+        <a href="https://linkedin.com/in/stephane-ruhlmann">LinkedIn</a> and
         <a href="https://github.com/stephane-ruhlmann">GitHub</a> or check out
         <a href="resume.pdf" target="_blank">my resume</a> (in french).
       </p>
