Add airtable link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         environments with the industry's best practices.
       </p>
       <p>
-        <a id="letsTalk" href="mailto:sj.ruhlmann@gmail.com">Let's talk?</a>
+        <a id="letsTalk" href="https://airtable.com/shrtnwgu8FZlpheeh"
+          >Let's get in touch?</a
+        >
       </p>
       <p>
         You can also find me on
